force-app/main/default/objects/SR_Approval_Empowerment__c/SR_Approval_Empowerment__c.object-meta.xml
<CustomObject>
    <description>This object maintains the Bill Adjustment Empowerment Rule grid for approval.</description>
    <label>SR Approval Empowerment</label>
    <nameField>
        <displayFormat>AE-{000000}</displayFormat>
        <label>Empowerment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>