force-app/main/default/objects/SR_Approval_Empowerment__c/fields/Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reason__c</fullName>
    <label>Adjustment Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>