force-app/main/default/objects/SR_Approval_Empowerment__c/fields/Attachment_Ind__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Ind__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Y = user must upload the bill adjustment attachment before submit the bill adjustment request if require the corresponding tier to approve</description>
    <label>Attachment Ind</label>
    <type>Checkbox</type>
</CustomField>