force-app/main/default/objects/SR_Approval_Empowerment__c/fields/Calculation_Mode__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Mode__c</fullName>
    <label>Calculation Mode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>