force-app/main/default/objects/SR_Approval_Empowerment__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>