force-app/main/default/objects/SR_Approval_Empowerment__c/fields/Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>Reason_Type__c</fullName>
    <label>Reason Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>