force-app/main/default/objects/SR_Approval_Empowerment__c/fields/Segment_Tier__c.field-meta.xml
<CustomField>
    <fullName>Segment_Tier__c</fullName>
    <label>Segment Tier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>