force-app/main/default/objects/SR_Approval_Empowerment__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>